update manifest url

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -37,7 +37,7 @@
   "Icon": "assets/icalIcon", 
   "Category": "iCal",
   "CategoryIcon": "assets/icalIcon",
-  "URL": "https://pedrofuentes.com", 
+  "URL": "https://github.com/pedrofuentes/stream-deck-ical#readme", 
   "Version": "1.0",
   "OS": [
     {
