Implement setting ical url using property inspector
It will also handle triggering a new cache update so the user does not need to wait for X minutes until the next fetch. Still the setup UI needs work

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -37,7 +37,8 @@
   "Icon": "assets/icalIcon", 
   "Category": "iCal",
   "CategoryIcon": "assets/icalIcon",
-  "URL": "https://github.com/pedrofuentes/stream-deck-ical#readme", 
+  "URL": "https://github.com/pedrofuentes/stream-deck-ical#readme",
+  "PropertyInspectorPath": "pi.html",
   "Version": "1.0",
   "OS": [
     {
