--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "standard": "^16.0.3",
     "webpack": "^5.20.2",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "fast-equals": "^2.0.0"
   }
 }
