--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stream-deck-ical",
-  "version": "1.0.0",
-  "description": "An iCal plugin for Stream Deck",
+  "version": "1.1.0",
+  "description": "An elgato Stream Deck plugin that displays information from your calendar using an iCal URL. Visual cues and a countdown will help you end meetings on time and be ready for the next one.",
   "private": true,
   "scripts": {
     "test": "jest",
@@ -15,7 +15,10 @@
     "url": "git+https://github.com/pedrofuentes/stream-deck-ical.git"
   },
   "keywords": [
-    "ical"
+    "ical",
+    "streamdeck",
+    "elgato",
+    "productivity"
   ],
   "standard": {
     "env": [
