--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "build": "cross-env NODE_ENV=development rollup -c",
+    "build:debug": "cross-env NODE_ENV=development STREAMDECK_DEBUG=1 rollup -c",
     "build:production": "cross-env NODE_ENV=production rollup -c",
     "watch": "cross-env NODE_ENV=development rollup -c -w",
     "dev": "npm run build && streamdeck link dist/com.pedrofuentes.ical.sdPlugin",
@@ -47,6 +48,7 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.0",
+    "@rollup/plugin-replace": "^6.0.3",
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/luxon": "^3.4.0",
     "@types/node": "^20.0.0",
