--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,6 +28,20 @@
       "SupportedInMultiActions": false,
       "Tooltip": "Countdown until next meeting starts", 
       "UUID": "com.pedrofuentes.ical.nextmeeting"
+    },
+    {
+      "Icon": "assets/icalIcon", 
+      "Name": "Smart Calendar", 
+      "States": [
+        {
+          "Image": "assets/nextMeeting",
+          "TitleAlignment": "middle", 
+          "FontSize": 10
+        }
+      ], 
+      "SupportedInMultiActions": false,
+      "Tooltip": "Shows Time Left when in meeting, Next Meeting otherwise", 
+      "UUID": "com.pedrofuentes.ical.combined"
     }
   ], 
   "SDKVersion": 2,
