--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
       ], 
       "SupportedInMultiActions": false,
       "Tooltip": "Time left on the current meeting", 
+      "UserTitleEnabled": false,
       "UUID": "com.pedrofuentes.ical.timeleft"
     },
     {
@@ -27,6 +28,7 @@
       ], 
       "SupportedInMultiActions": false,
       "Tooltip": "Countdown until next meeting starts", 
+      "UserTitleEnabled": false,
       "UUID": "com.pedrofuentes.ical.nextmeeting"
     },
     {
@@ -41,6 +43,7 @@
       ], 
       "SupportedInMultiActions": false,
       "Tooltip": "Shows Time Left when in meeting, Next Meeting otherwise", 
+      "UserTitleEnabled": false,
       "UUID": "com.pedrofuentes.ical.combined"
     }
   ], 
